Bug 68578 - WinLauncher fails to launch when double-clicked
Summary: WinLauncher fails to launch when double-clicked
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Windows 7
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar, PlatformOnly
Depends on:
Blocks: 68576
  Show dependency treegraph
 
Reported: 2011-09-21 15:26 PDT by Adam Roben (:aroben)
Modified: 2012-01-05 06:53 PST (History)
3 users (show)

See Also:


Attachments
Turn WinLauncher into a stub .exe launcher and a .dll that contains all the real code (36.55 KB, patch)
2012-01-04 11:24 PST, Adam Roben (:aroben)
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2011-09-21 15:26:05 PDT
To reproduce:

1. Double-click WinLauncher.exe

It doesn't launch. It complains about not being able to find CFNetwork.dll.
Comment 1 Radar WebKit Bug Importer 2011-09-21 15:26:39 PDT
<rdar://problem/10163861>
Comment 2 Adam Roben (:aroben) 2011-09-21 15:34:14 PDT
I wonder if we're going to have to split WinLauncher into a .exe launcher that sets up the DLL search path and a .dll that contains the real code.
Comment 3 Adam Roben (:aroben) 2012-01-04 11:24:21 PST
Created attachment 121128 [details]
Turn WinLauncher into a stub .exe launcher and a .dll that contains all the real code
Comment 4 WebKit Review Bot 2012-01-04 11:27:59 PST
Attachment 121128 [details] did not pass style-queue:

Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/win/ChangeLog', u'Source/Web..." exit_code: 1

Tools/win/DLLLauncher/DLLLauncherMain.cpp:33:  Alphabetical sorting problem.  [build/include_order] [4]
Tools/WinLauncher/WinLauncherLauncherResource.h:1:  One or more unexpected \r (^M) found; better to use only a \n  [whitespace/carriage_return] [1]
Suppressing further [whitespace/carriage_return] reports for this file.
Tools/WinLauncher/WinLauncherLauncherResource.h:1:  Should have a space between // and comment  [whitespace/comments] [4]
Total errors found: 22 in 17 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 5 Adam Roben (:aroben) 2012-01-04 11:29:20 PST
Comment on attachment 121128 [details]
Turn WinLauncher into a stub .exe launcher and a .dll that contains all the real code

View in context: https://bugs.webkit.org/attachment.cgi?id=121128&action=review

>>> Tools/WinLauncher/WinLauncherLauncherResource.h:1
>>> +//{{NO_DEPENDENCIES}}
>> 
>> One or more unexpected \r (^M) found; better to use only a \n  [whitespace/carriage_return] [1]
> 
> Should have a space between // and comment  [whitespace/comments] [4]

This file is auto-generated by VS.

>> Tools/win/DLLLauncher/DLLLauncherMain.cpp:33
>> +#include <string>
> 
> Alphabetical sorting problem.  [build/include_order] [4]

I'm not sure what our standard style is for headers like <string>. I guess I'll sort them normally.
Comment 6 Adam Roben (:aroben) 2012-01-05 06:53:14 PST
Committed r104153: <http://trac.webkit.org/changeset/104153>